# DISP-tutorial

./: .gitignore  README.md  main.py  pyproject.toml
exercise/: DISP_1_1.py  DISP_1_2.py  DISP_1_3.py  DISP_2_1.py  DISP_2_2.py  DISP_2_3.py  DISP_2_4.py  DISP_3_1.py  DISP_3_2.py  DISP_3_3.py  DISP_3_4.py  DISP_4_1.py  DISP_4_2.py  DISP_4_3.py  DISP_5_1.py  DISP_5_2.py  DISP_5_3.py  DISP_5_4.py  fft_experiments.py  list_audio_devices.py  multi_madia_r_w_1.py  multi_media_r_w_1.py  multi_media_r_w_2.py  multi_media_r_w_3.py  multi_media_record.py  multi_media_record_simulated.py  play_record.py  test_audio_install.py
exercise/multi_media_r_w_3/: output1.avi
