[project]
name = "disp-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pyaudio>=0.2.14",
    "pyqt5>=5.15.11",
    "scipy>=1.17.1",
    "simpleaudio>=1.0.4",
]
